# microwave

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  microwave.py  pyproject.toml  redis_connection.py  routers.py
templates/: index.html
tests/: test_microwave.py
