[tool.poetry]
name = "microwave"
version = "0.1.0"
description = "sample FastAPI app using websockets and Redis"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.2"
fastapi = "^0.100.0"
pyjwt = "^2.7.0"
websockets = "^11.0.3"
aioredis = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
